--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/blog.css" rel="stylesheet">
+    <link href="css/scotch-map.css" rel="stylesheet">
 </head>
 
 <body style="">
