--- a/index.html
+++ b/index.html
@@ -50,6 +50,68 @@
             <!-- /.blog-post -->
         </div>
         <!-- /.blog-main -->
+        <div class="col-sm-4">
+            <div class="col-sm-12">
+                <label class="checkbox">
+                    <input type="checkbox" data-toggle="toggle" id="Body"> Body
+                </label>
+            </div>
+            <div class="col-sm-12">
+                <label class="checkbox">
+                    <input type="checkbox" data-toggle="toggle" id="Sweetness"> Sweetness
+                </label>
+            </div>
+            <div class="col-sm-12">
+                <label class="checkbox">
+                    <input type="checkbox" data-toggle="toggle" id="Smoky"> Smoky
+                </label>
+            </div>
+            <div class="col-sm-12">
+                <label class="checkbox">
+                    <input type="checkbox" data-toggle="toggle" id="Medicinal"> Medicinal
+                </label>
+            </div>
+            <div class="col-sm-12">
+                <label class="checkbox">
+                    <input type="checkbox" data-toggle="toggle" id="Tobacco"> Tobacco
+                </label>
+            </div>
+            <div class="col-sm-12">
+                <label class="checkbox">
+                    <input type="checkbox" data-toggle="toggle" id="Honey"> Honey
+                </label>
+            </div>
+            <div class="col-sm-12">
+                <label class="checkbox">
+                    <input type="checkbox" data-toggle="toggle" id="Spicy"> Spicy
+                </label>
+            </div>
+            <div class="col-sm-12">
+                <label class="checkbox">
+                    <input type="checkbox" data-toggle="toggle" id="Winey"> Winey
+                </label>
+            </div>
+            <div class="col-sm-12">
+                <label class="checkbox">
+                    <input type="checkbox" data-toggle="toggle" id="Nutty"> Nutty
+                </label>
+            </div>
+            <div class="col-sm-12">
+                <label class="checkbox">
+                    <input type="checkbox" data-toggle="toggle" id="Malty"> Malty
+                </label>
+            </div>
+            <div class="col-sm-12">
+                <label class="checkbox">
+                    <input type="checkbox" data-toggle="toggle" id="Fruity"> Fruity
+                </label>
+            </div>
+            <div class="col-sm-12">
+                <label class="checkbox">
+                    <input type="checkbox" data-toggle="toggle" id="Floral"> Floral
+                </label>
+            </div>
+        </div>
     </div>
     <!-- /.row -->
 </main>
