Starting to look like something

--- a/index.html
+++ b/index.html
@@ -41,74 +41,83 @@
 
 <main role="main" class="container">
     <div class="row">
-        <div class="col-sm-8 blog-main">
-            <div class="blog-post">
+        <div class="col-sm-8">
 
                 <div id="scmap"></div>
 
-            </div>
-            <!-- /.blog-post -->
         </div>
-        <!-- /.blog-main -->
         <div class="col-sm-4">
+
             <div class="col-sm-12">
-                <label class="checkbox">
+                <label class="container">
                     <input type="checkbox" data-toggle="toggle" id="Body"> Body
+                    <span class="checkmark"></span>
                 </label>
             </div>
             <div class="col-sm-12">
-                <label class="checkbox">
+                <label class="container">
                     <input type="checkbox" data-toggle="toggle" id="Sweetness"> Sweetness
+                    <span class="checkmark"></span>
                 </label>
             </div>
             <div class="col-sm-12">
-                <label class="checkbox">
+                <label class="container">
                     <input type="checkbox" data-toggle="toggle" id="Smoky"> Smoky
+                    <span class="checkmark"></span>
                 </label>
             </div>
             <div class="col-sm-12">
-                <label class="checkbox">
+                <label class="container">
                     <input type="checkbox" data-toggle="toggle" id="Medicinal"> Medicinal
+                    <span class="checkmark"></span>
                 </label>
             </div>
             <div class="col-sm-12">
-                <label class="checkbox">
+                <label class="container">
                     <input type="checkbox" data-toggle="toggle" id="Tobacco"> Tobacco
+                    <span class="checkmark"></span>
                 </label>
             </div>
             <div class="col-sm-12">
-                <label class="checkbox">
+                <label class="container">
                     <input type="checkbox" data-toggle="toggle" id="Honey"> Honey
+                    <span class="checkmark"></span>
                 </label>
             </div>
             <div class="col-sm-12">
-                <label class="checkbox">
+                <label class="container">
                     <input type="checkbox" data-toggle="toggle" id="Spicy"> Spicy
+                    <span class="checkmark"></span>
                 </label>
             </div>
             <div class="col-sm-12">
-                <label class="checkbox">
+                <label class="container">
                     <input type="checkbox" data-toggle="toggle" id="Winey"> Winey
+                    <span class="checkmark"></span>
                 </label>
             </div>
             <div class="col-sm-12">
-                <label class="checkbox">
+                <label class="container">
                     <input type="checkbox" data-toggle="toggle" id="Nutty"> Nutty
+                    <span class="checkmark"></span>
                 </label>
             </div>
             <div class="col-sm-12">
-                <label class="checkbox">
+                <label class="container">
                     <input type="checkbox" data-toggle="toggle" id="Malty"> Malty
+                    <span class="checkmark"></span>
                 </label>
             </div>
             <div class="col-sm-12">
-                <label class="checkbox">
+                <label class="container">
                     <input type="checkbox" data-toggle="toggle" id="Fruity"> Fruity
+                    <span class="checkmark"></span>
                 </label>
             </div>
             <div class="col-sm-12">
-                <label class="checkbox">
+                <label class="container">
                     <input type="checkbox" data-toggle="toggle" id="Floral"> Floral
+                    <span class="checkmark"></span>
                 </label>
             </div>
         </div>
