Change layour abit

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <meta name="author" content="Niels Jan van de Pol">
     <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-    <title>Scotch Flavor Map</title>
+    <title>SCOTCH FLAVOR MAP</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/blog.css" rel="stylesheet">
     <link href="css/scotch-map.css" rel="stylesheet">
 </head>
 
@@ -27,6 +26,7 @@
         <div class="container">
             <nav class="nav">
                 <a class="nav-link active" href="index.html">Scotch Flavor Map</a>
+                <a class="nav-link active" href="github.html">Github</a>
             </nav>
         </div>
     </div>
@@ -34,19 +34,18 @@
     <div class="blog-header">
         <div class="container">
             <h1 class="blog-title">Discover the true flavor of Scotch</h1>
-            <p class="lead blog-description">Scotch is delicious</p>
         </div>
     </div>
 </header>
 
 <main role="main" class="container">
     <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-6 offset-2">
 
                 <div id="scmap"></div>
 
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-2">
 
             <div class="col-sm-12">
                 <label class="container">
