Update the scotch map

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
     <div class="blog-header">
         <div class="container">
-            <h1 class="blog-title">Check out this project on github</h1>
+            <h1 class="blog-title">About this Saxion project</h1>
         </div>
     </div>
 </header>
@@ -42,7 +42,9 @@
 <main role="main" class="container">
     <div class="row">
         <div class="col-sm-12">
-            <p class="text-center"><a href="https://github.com/enjee/whiskyflavor" class="btn btn-outline btn-git"><span class="fa fa-github centroid"> View on GitHub</span></a></p>
+            <p class="text-center centroid aboot">This project visualizes the flavor of Whisky.</bn>
+            most visualizations give you an angle on the generic profile of the whisky such as here: <a href="https://www.google.nl/search?q=whisky+flavor&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjRmpHZheDYAhXHJlAKHa4vCMoQ_AUICygC&biw=1767&bih=1289">Flavor Viz.</a></br>
+            Other images show the location of distilleries. I wanted to join these two information sources and create a Whisky flavor map!</br></br>Have fun!</br></br>Niels Jan</p>
         </div>
     </div>
     <!-- /.row -->
