--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="container">
             <nav class="nav">
                 <a class="nav-link active" href="index.html">Scotch Flavor Map</a>
+                <a class="nav-link active" href="about.html">About this project</a>
                 <a class="nav-link active" href="github.html">Github</a>
             </nav>
         </div>
@@ -110,12 +111,6 @@
             <div class="col-sm-12">
                 <label class="container">
                     <input type="checkbox" data-toggle="toggle" id="Fruity"> Fruity
-                    <span class="checkmark"></span>
-                </label>
-            </div>
-            <div class="col-sm-12">
-                <label class="container">
-                    <input type="checkbox" data-toggle="toggle" id="Floral"> Floral
                     <span class="checkmark"></span>
                 </label>
             </div>
