Change some coordinates, style and add wiki

--- a/about.html
+++ b/about.html
@@ -41,10 +41,58 @@
 
 <main role="main" class="container">
     <div class="row">
-        <div class="col-sm-12">
-            <p class="text-center centroid aboot">This project visualizes the flavor of Whisky.</bn>
-            most visualizations give you an angle on the generic profile of the whisky such as here: <a href="https://www.google.nl/search?q=whisky+flavor&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjRmpHZheDYAhXHJlAKHa4vCMoQ_AUICygC&biw=1767&bih=1289">Flavor Viz.</a></br>
-            Other images show the location of distilleries. I wanted to join these two information sources and create a Whisky flavor map!</br></br>Have fun!</br></br>Niels Jan</p>
+        <div class="col-sm-3">
+        </div>
+        <div class="col-sm-6">
+            <p class="centroid aboot">This project visualizes the flavor of Whisky.</br>
+                most visualizations give you an angle on the generic profile of the whisky such as here: <a
+                        href="https://www.google.nl/search?q=whisky+flavor&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjRmpHZheDYAhXHJlAKHa4vCMoQ_AUICygC&biw=1767&bih=1289">Flavor
+                    Viz.</a></br>
+                Other images show the location of distilleries. I wanted to join these two information sources and
+                create a Whisky flavor map!</br></br>Have fun!</br></br>Niels Jan</br></br></br></br></p>
+        </div>
+
+        <div class="col-sm-3">
+        </div>
+        <div class="col-sm-3">
+        </div>
+
+        <div class="col-sm-6">
+            <p class=" centroid aboot">Scotland was traditionally divided into four regions: The Highlands,
+                The Lowlands, The Isle of Islay, and Campbeltown. Due to the large number of distilleries found there,
+                the Speyside region is now also recognized by the Scotch Whisky Association (SWA) as a distinct region.
+                The whisky-producing islands other than Islay are not recognised as a distinct region by the SWA, which
+                groups them into the Highlands region.
+
+                The Lowlands: The southernmost region of Scotland.</br>
+                There are five distilleries that remain in operation: Auchentoshan, Bladnoch, Glenkinchie, Annandale and
+                Ailsa Bay from the Girvan Distillery plus three more—Daftmill, Eden Mill, and Kingsbarns—are currently
+                pending their first releases.</br>
+                Speyside: Speyside gets its name from the River Spey, which cuts through this region and provides water
+                to many of the distilleries.</br>
+                It has the largest number of distilleries, which includes: Aberlour, Balvenie, Cardhu, Cragganmore,
+                Dalwhinnie, Glenfarclas, Glenglassaugh, Glenfiddich, Speyburn, The Macallan, The Glenlivet, and The
+                Glenrothes.</br>
+                Encompassing the area surrounding the River Spey in north-east Scotland, once considered part of the
+                Highlands, has almost half of the total number (approx. 105 as of 2013) of distilleries in Scotland
+                within its geographic boundaries; consequently it is officially recognized as a distinct region.
+                The Highlands: The Highlands is by far the largest region in Scotland both in area and in whisky
+                production.</br>
+                Some Highland distilleries: Aberfeldy, Edradour, Balblair, Ben Nevis, Dalmore, Glen Ord, Glenmorangie,
+                Oban, Glendronach, Old Pulteney, Tullibardine and Tomatin.</br>
+                The Islands, an unrecognised sub-region includes all of the whisky-producing islands (but excludes
+                Islay): Arran, Jura, Mull, Orkney, and Skye: with their respective distilleries: Arran, Jura, Tobermory,
+                Highland Park and Scapa, and Talisker.</br>
+                Campbeltown, once home to over 30 distilleries, currently has only three distilleries operating: Glen
+                Scotia, Glengyle, and Springbank.</br>
+                Islay /ˈaɪlə/: has eight producing distilleries: Ardbeg, Bowmore, Bruichladdich, Bunnahabhain, Caol Ila,
+                Kilchoman, Lagavulin, and Laphroaig.</br>
+                Although only five regions are specifically described, any Scottish locale may be used to describe a
+                whisky if it is distilled entirely within that place; for example a single malt whisky distilled on
+                Orkney could be described as Orkney Single Malt Scotch Whisky instead of as an Island whisky.</br></br>
+                source: <a href="https://en.wikipedia.org/wiki/Scotch_whisky">Wikipedia Scotch Whisky</a></p>
+        </div>
+        <div class="col-sm-3">
         </div>
     </div>
     <!-- /.row -->
