--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link href="css/scotch-map.css" rel="stylesheet">
 </head>
 
-<body style="">
-
+<body>
+<div class="waves"></div>
 <header>
     <div class="blog-masthead">
         <div class="container">
@@ -43,10 +43,10 @@
     <div class="row">
         <div class="col-sm-6 offset-2">
 
-                <div id="scmap"></div>
+            <div id="scmap"></div>
 
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-2 checkboxes">
 
             <div class="col-sm-12">
                 <label class="container">
