Add cards to about

--- a/github.html
+++ b/github.html
@@ -41,9 +41,44 @@
 
 <main role="main" class="container">
     <div class="row">
-        <div class="col-sm-12">
-            <p class="text-center"><a href="https://github.com/enjee/whiskyflavor" class="btn btn-outline btn-git"><span class="fa fa-github centroid"> View on GitHub</span></a></p>
+        <div class="col-sm-2">
         </div>
+        <div class="col-sm-4">
+            <div class="card">
+
+                <!--Card image-->
+                <img class="img-fluid"
+                     src="images/triad.png"
+                     alt="Card image cap">
+
+                <!--Card content-->
+                <div class="card-body text-center">
+                    <a href="https://color.adobe.com/Eilean-Donan-Scotland-color-theme-8269995/edit/?copy=true&base=2&rule=Triad&selected=2&name=Copy%20of%20Eilean%20Donan%20Scotland&mode=rgb&rgbvalues=0.44902000000000003,0.3453283197774516,0.31336832530057185,0.6264071253802882,0.79085,0.47281432031736054,0.74902,0.7160517167171584,0.7058901864056579,0.3880123419800494,0.4184244525869866,0.5490200000000001,0.283515362797932,0.3147768903205956,0.44902000000000003&swatchOrder=0,1,2,3,4">
+                        Used Adobe Color Triad
+                    </a>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col-sm-4">
+            <div class="card">
+
+                <!--Card image-->
+                <img class="img-fluid"
+                     src="images/github-logo.jpg"
+                     alt="Card image cap">
+
+                <!--Card content-->
+                <div class="card-body text-center">
+                    <a href="https://github.com/enjee/whiskyflavor"> View on GitHub</a>
+                </div>
+
+            </div>
+        </div>
+
+
+    </div>
     </div>
     <!-- /.row -->
 </main>
