--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         </div>
         <div class="col-sm-6">
             <p class="centroid aboot">This project visualizes the flavor of Whisky.</br>
-                most visualizations give you an angle on the generic profile of the whisky such as here: <a
+                most visualizations give you an angle on the generic profile of the whisky such as here: <a  class="dark-hover"
                         href="https://www.google.nl/search?q=whisky+flavor&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjRmpHZheDYAhXHJlAKHa4vCMoQ_AUICygC&biw=1767&bih=1289">Flavor
                     Viz.</a></br>
                 Other images show the location of distilleries. I wanted to join these two information sources and
@@ -90,7 +90,7 @@
                 Although only five regions are specifically described, any Scottish locale may be used to describe a
                 whisky if it is distilled entirely within that place; for example a single malt whisky distilled on
                 Orkney could be described as Orkney Single Malt Scotch Whisky instead of as an Island whisky.</br></br>
-                source: <a href="https://en.wikipedia.org/wiki/Scotch_whisky">Wikipedia Scotch Whisky</a></p>
+                source: <a href="https://en.wikipedia.org/wiki/Scotch_whisky" class="dark-hover">Wikipedia Scotch Whisky</a></p>
         </div>
         <div class="col-sm-3">
         </div>
