--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div id="scmap"></div>
 
         </div>
-        <div class="col-sm-2 checkboxes">
+        <div class="col-sm-4 checkboxes">
 
             <div class="col-sm-12">
                 <label class="container">
@@ -114,11 +114,16 @@
                     <span class="checkmark"></span>
                 </label>
             </div>
+
+
+            <div class="col-sm-12 top-3-container">
+                <div class="top-3-header"></div>
+                <div class="top-3-item-container">
+                </div>
+            </div>
         </div>
     </div>
-    <!-- /.row -->
 </main>
-<!-- /.container -->
 
 
 <!-- Bootstrap core JavaScript
