Moved external resources

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <title>SCOTCH FLAVOR MAP</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="external-resources/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/scotch-map.css" rel="stylesheet">
@@ -103,9 +103,9 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="js/d3.v4.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="external-resources/jquery-3.2.1.min.js"></script>
+<script src="external-resources/d3.v4.js"></script>
+<script src="external-resources/bootstrap.min.js"></script>
 <script src="js/scotch-map.js"></script>
 
 
