Added welcome message

--- a/github.html
+++ b/github.html
@@ -64,7 +64,7 @@
 
                 <!--Card image-->
                 <img class="img-fluid"
-                     src="images/github-logo.jpg"
+                     src="images/github-logo.png"
                      alt="Card image cap">
 
                 <!--Card content-->
@@ -76,13 +76,28 @@
 
             </div>
         </div>
-
-
     </div>
+
+    <div class="row space-row">
+        <div class="col-sm-2">
+        </div>
+        <div class="col-sm-4">
+            <div class="card">
+                <!--Card image-->
+                <img class="img-fluid"
+                     src="images/welcome.jpg"
+                     alt="Card image cap">
+
+                <!--Card content-->
+                <a href="#" onclick="resetShowMap();">
+                    <div class="card-body text-center">
+                        Re-enable welcome message on main page
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
-    <!-- /.row -->
 </main>
-<!-- /.container -->
 
 
 <!-- Bootstrap core JavaScript
